# sudoku-py

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  sudoku-runner.py  tmx
docs/: index.md  usage.md
requirements/: dev-requirements.in
src/sudoku/: __main__.py  get_sudoku.py  sudoku.py
tests/: my_test.py
